# haskell-othello-reversi

./: .~lock.Report CS2006H2.odt#  :wq  Othello.cabal  README  README.md  Report CS2006H2.odt  save.othello
code/: README  save.othello
code/documentation/: Board.html  Draw.html  Input.html  mini_Board.html  mini_Datatype.html  mini_Draw.html  mini_Input.html
code/src/: AI.hs  Board.hs  Draw.hs  Input.hs  Main.hs
documentation/: AI.html  Board.html  Datatype.html  Draw.html  Main.html  doc-index.html  index-frames.html  index.html  mini_AI.html  mini_Board.html  mini_Draw.html
src/: .AI.hs.swp  .Board.hs.swp  .Draw.hs.swp  .Input.hs.swp  AI.hs  Board.hs  Datatype.hs  Draw.hs  Encode.hs  Input.hs  Main.hs  Server.hs
