name:                Othello
version:             0.1.0.0
synopsis:            Othello game
-- description:         
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006
author:              Edwin Brady
maintainer:          ecb10@st-andrews.ac.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable othello
  main-is:             Main.hs
  Other-modules:       Board, Input, Draw, AI
  build-depends:       base >=4.6 && <4.8,
                       gloss
  hs-source-dirs:      src
  default-language:    Haskell2010
